Nav-bar and Projects list page > fixed the bug: back button doesn't work on small screens; Request details: corrected the height of the modal 'USERS LIST' on small screens

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -179,3 +179,21 @@ input[type=text] {
     visibility: visible;
   }
   /* // end TOOLTIP */
+
+// TITLE AN SUBTITLE OF THE PAGE
+.prjct-page-title {
+    padding-left:15px; margin-top:55px; margin-bottom: 5px; font-weight: 400;
+}
+
+.prjct-page-subtitle {
+    padding-left:15px; color: rgba(0,0,0,0.54); font-size:16px; margin-top: 0px;
+}
+// CHANGE COLOR OF TITLE AN SUBTITLE ON SMALL DEVICE
+@media (max-width: 530px) {
+    .prjct-page-title {
+        color: #ffffff;
+    }
+    .prjct-page-subtitle {
+        color: #ffffff;
+    }
+}
