--- a/src/app/requests-msgs/requests-msgs.component.scss
+++ b/src/app/requests-msgs/requests-msgs.component.scss
@@ -313,6 +313,17 @@
 }
 
 /* MODAL START */
+
+// .modal-dialog {
+//   width: 100%;
+//   height: 100%;
+//   padding: 0;
+// }
+
+// .modal-content {
+//   height: 100%;
+//   border-radius: 0;
+// }
 .modal {
   top: 0;
 }
@@ -374,6 +385,16 @@ button.close {
   background-color: #eeeeee;
   padding-top:10px !important;
 }
+
+// @media screen and (max-width: 992px) {
+//   .modal-dialog {
+//     width: 100% !important; height: 100% !important; margin:0 !important; padding: 0 !important;
+//   }
+//   .modal-content {
+//     height: auto !important; min-height: 100% !important; border-radius: 0 !important; border:none !important
+//   }
+// }
+
 /* MODAL END */
 
 // start TOOLTIP
@@ -417,64 +438,6 @@ button.close {
 }
 // /.end TOOLTIP 
 
-// three buttons
-.tiledesk-column {
-  float: left;
-}
-
-.tiledesk-left, .tiledesk-right {
-  width: 25%;
-}
-
-.tiledesk-middle {
-  width: 50%;
-}
-
-
-
-// You can use display: flex on a parent to align children items side-by-side. To specify that you want them centered, you can add justify-content: center;.
-
-.btn-group {
-    display: flex;
-    justify-content: center;
-}
-// This method replaces your need for floats, so I've removed them from the buttons themselves.
-
-div.centre {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0;
-  margin-bottom: 0;
-  align-content: center;
-  text-align: center;
-}
-
-div.bottomwhitespace {
-  padding-bottom: 100pt;
-  padding-top: 100pt;
-}
-
-.btn-group {
-   display: flex;
-   justify-content: center;
-}
-
-.btn-group .button {
-  background-color: #4CAF50;
-  /* Green */
-  margin-top: 35pt;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.btn-group .button:hover {
-  background-color: #3e8e41;
-}
 
   // start CHECKBOX
   /* Customize the label (the container) */
